syntax = "proto3";
package gloo.solo.io;
option go_package = "github.com/solo-io/gloo/projects/gloo/pkg/api/v1/options/router";

import "google/protobuf/wrappers.proto";

// Router is an envoy http filter
// Maps to https://www.envoyproxy.io/docs/envoy/latest/api-v3/extensions/filters/http/router/v3/router.proto
message Router{ 
    // Do not add any additional x-envoy- headers to requests or responses. This only affects the router filter generated x-envoy- headers, other Envoy filters and the HTTP connection manager may continue to set x-envoy- headers.
    google.protobuf.BoolValue suppress_envoy_headers = 1;

    // Whether dynamic stats should be enabled or disabled. If not set, or if
    // set to true, dynamic stats will be enabled. Otherwise, if set to false,
    // dynamic stats will be disabled. It is strongly recommended to leave this
    // in the default state in production - it should only be set to false in
    // very specific benchmarking or profiling scenarios.
    google.protobuf.BoolValue dynamic_stats = 2;
}
